# STEMwerk-standalone

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
src/stemwerk/: export_dialog.py  main.py  main_window.py  player.py  themes.py  vertical_slider.py  waveform_widget.py  workers.py
tests/: test_import.py
