[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stemwerk-standalone"
version = "0.1.0"
description = "Standalone stem separation app for the flarkAUDIO ecosystem."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "flarkAUDIO" }]
dependencies = [
  "PySide6>=6.6",
  "stemwerk-core",
  "soundfile",
  "sounddevice",
  "numpy",
]

[project.scripts]
stemwerk = "stemwerk.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/stemwerk"]

[tool.pytest.ini_options]
pythonpath = ["src"]
